welcome.lessons.welcome.bat.bool2.AnswerCell.scala.error
answerCell:2: error: not found: type boolean
def answerCell (isMorning:boolean, isMom: boolean ,  isAsleep: boolean) {
                          ^answerCell:2: error: not found: type boolean
def answerCell (isMorning:boolean, isMom: boolean ,  isAsleep: boolean) {
                                          ^answerCell:2: error: not found: type boolean
def answerCell (isMorning:boolean, isMom: boolean ,  isAsleep: boolean) {
                                                               ^