welcome.lessons.welcome.bat.bool2.AnswerCell.scala.code

def answerCell (isMorning:boolean, isMom: boolean ,  isAsleep: boolean) {
  if (isAsleep)
    return false;
  if ((isMorning && isMom) || !isMorning)
    return true;
  else return false;
}
